# ReversiProject

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ConsoleScreen.cpp  ConsoleScreen.h  GameFlow.cpp  GameFlow.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Screen.h  main.cpp
Reversi/include/: AIPlayer.h  Board.h  Client.h  ConsoleScreen.h  GameFlow.h  GameLogic.h  HumanPlayer.h  LocalPlayer.h  RemotePlayer.h
Reversi/src/: AIPlayer.cpp  Board.cpp  Client.cpp  ConsoleScreen.cpp  GameFlow.cpp  GameLogic.cpp  HumanPlayer.cpp  LocalPlayer.cpp  Player.cpp  RemotePlayer.cpp  main.cpp
ReversiClient/: config_client.txt  makefile~
ReversiClient/UnitTest/: TestFixture.cpp  gtest_main.cpp
ReversiClient/include/: Client.h  ConsoleScreen.h  GameFlow.h  GameLogic.h  LocalPlayer.h  Player.h  RemotePlayer.h
ReversiClient/src/: AIPlayer.cpp  Board.cpp  Cell.cpp  Client.cpp  ConsoleScreen.cpp  GameFlow.cpp  GameLogic.cpp  LocalPlayer.cpp  Player.cpp  RemotePlayer.cpp  main.cpp
ReversiServer/: makefile  makefile~
ReversiServer/include/: ClientHandler.h  CloseCommand.h  Command.h  CommandManager.h  Game.h  (+10 more)
UnitTest/: TestFixture.cpp  gtest_main.cpp
UnitTests/: TestFixture.cpp  TestGameLogic.cpp
include/: AIPlayer.h  Board.h  Client.h  ConsoleScreen.h  GameFlow.h  GameLogic.h  HumanPlayer.h  LocalPlayer.h  Player.h  RemotePlayer.h  Screen.h
src/: AIPlayer.cpp  Board.cpp  Cell.cpp  Client.cpp  ConsoleScreen.cpp  GameFlow.cpp  GameLogic.cpp  HumanPlayer.cpp  LocalPlayer.cpp  Player.cpp  RemotePlayer.cpp  main.cpp
(+19 files in other folders)
